<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Congratz</string>
    <string name="action_settings">Settings</string>
    <string name="addbutton">Add birthday</string>
    <string name="showallbutton">Show all</string>
    <string name="settingsbutton">Settings</string>
    <string name="exitbutton">Exit</string>
    <string name="save">Save</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="number">Number</string>
    <string name="birthday">Birthday</string>
    <string name="addfromcontacts">Add from contacts</string>
    <string name="defaultmessage">Write your own personal message here:</string>
    <string name="changetime">The time for sending the message</string>
    <string name="language">Select language</string>
    <string name="newmessage">Your message is updated!</string>
    <string name="deleteButton">Delete all</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="success">Success!</string>
    <string name="added">was added.</string>
    <string name="edited">was successfully edited.</string>
    <string name="addmore">Add more</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="error">Could not add</string>
    <string name="errormessage">All fields must be filled out!\n\nFirstname: Only letters, capital or in lower case.\n\nLastname: Only letters, capital or in lower case.\n\nNumber: Only numbers between 0-9 and +, and 8 digits</string>
    <string name="onoffservice">Turn on/off sms service. Status:</string>
    <string name="smsserviceon">SMS service is turned on</string>
	<string name="smsserviceoff">SMS service is turned off</string>
	<string name="info">Click item and hold to edit/delete</string>
	<string name="choosenumber">Choose a number</string>
	<string name="ops">Ops!</string>
	<string name="emptylist">The list is already emptyPerson-tabellen er allerede tom!</string>
	<string name="suretitle">Confirm</string>
	<string name="sure">Are you sure you want to delete all?</string>
	<string name="editordeletetitle">Edit or delete?</string>
	<string name="editordelete">Do you want to edit or delete this person?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="count">Count:</string>
	<string name="deletedall">Everyone was deleted</string>
	<string name="notdeletedall">Could not delete all</string>
	<string name="nocontacts">No contacts were found</string>
	<string name="defaultbirthdaymessage">Happy birthday!</string>
	<string name="on">On</string>
	<string name="off">Off</string>
	<string name="notititle">Birthday message sent</string>
	<string name="notimessage">Todays birthday message is sent</string>
</resources>
