<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue" >

    <TextView 
        android:id="@+id/antall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:background="#000000"
        android:layout_alignParentBottom="true"/>
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/info"
        android:layout_above="@+id/antall" />
    
    <Button
        android:id="@+id/slettAlle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@color/red"
        android:drawableRight="@drawable/trash"
        android:fontFamily="sans-serif-thin"
		android:drawablePadding="-20dp"
        android:text="@string/deleteButton" />
    <Button
        android:id="@+id/leggTil"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
        android:background="@color/green"
        android:drawableLeft="@drawable/add"
        android:fontFamily="sans-serif-thin"
		android:drawablePadding="-20dp"
        android:text="@string/addmore" />
    <TextView 
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slettAlle"
        android:text="@string/info"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="#000000"/>
</RelativeLayout>
